--- a/Dash/src/main/webapp/zmien.xhtml
+++ b/Dash/src/main/webapp/zmien.xhtml
@@ -31,7 +31,7 @@
 
 
 
-        <h:outputLabel  value="User" />
+        <h:outputLabel  value="DAO.User" />
         <h:inputSecret  value="#{Change.user}"/>
 
         <h:outputLabel for="newPassword" value="New Password" />
