--- a/Dash/src/main/webapp/index.xhtml
+++ b/Dash/src/main/webapp/index.xhtml
@@ -4,39 +4,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
 
 </h:head>
 <h:body>
-   <h:commandButton value="Zmien loginy" action="zmien" rendered="#{Dashboard.getUsername().equals('admin')}"/>
-   <h:commandButton value="Zmien login" action="zmien" rendered="#{!Dashboard.getUsername().equals('admin')}"/>
+   <h:commandButton value="Zmien loginy" action="zmien" rendered="#{Dashboard.getUser().getName().eguals('admin')}"/>
+   <h:commandButton value="Zmien login" action="zmien" rendered="#{!Dashboard.getUser().getName().eguals('admin')}"/>
    <h:commandButton value="Logout" action="logout"/>
-   <h:form rendered="#{Dashboard.getUsername().equals('admin')}">
+
+   <h:form>
       <h:outputText value="Wszystkie miejsca"/>
-      <h:dataTable value="#{Dashboard.bilets}" var="o">
+      <h:dataTable value="#{Dashboard.getStan}" var="element">
          <h:column>
-            #{o}
+            <f:facet name="header">Strefa</f:facet>
+            #{element.strefaId}
+         </h:column>
+         <h:column>
+            <f:facet name="header">Miejsce</f:facet>
+            #{element.id}
+         </h:column>
+         <h:column>
+            <f:facet name="header">Stan</f:facet>
+            #{element.wolne}
+         </h:column>
+         <h:column>
+            <f:facet name="header">Opłacony</f:facet>
+            #{element.oplacone}
          </h:column>
       </h:dataTable>
-   </h:form>
-
-   <h:form rendered="#{!Dashboard.getUsername().equals('admin')}">
-      <h:outputText value="Twoja strefa"/>
-      <h:dataTable value="#{Dashboard.bilets}" var="o">
-         <h:column>
-            #{o}
-         </h:column>
-      </h:dataTable>
-   </h:form>
-
-   <h:form rendered="#{Dashboard.getUsername().equals('admin')}">
-      <h:outputText value="Powiadomienia"/>
-      <h:dataTable value="#{Dashboard.powiadomienia}" var="o">
-         <h:column>
-            #{o}
-         </h:column>
-      </h:dataTable>
+      <p:poll interval="3" listener="#{Dashboard.getStan}" process="@this" update="panel" />
    </h:form>
 
 
