--- a/Parkometr/web/WEB-INF/success.xhtml
+++ b/Parkometr/web/WEB-INF/success.xhtml
@@ -7,5 +7,6 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
     <h:outputLabel value="Kupiles bilet"/>
+    <h:commandButton value="Powrot" action="index" />
 </f:view>
 </html>
