--- a/Sensor/web/index.xhtml
+++ b/Sensor/web/index.xhtml
@@ -5,7 +5,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-   <f:view>
-      <h:outputLabel value="Hello, world"/>
-   </f:view>
+<body>
+<h:form>
+   Miejsce id: <br/>
+   <h:inputText value="#{sensorBean.id}" /><br/>
+   <h:commandButton value="Set as occupied" action="#{sensorBean.ustawWolne(sensorBean.id)}"/><br/>
+   <h:commandButton value="Set as free" action="#{sensorBean.ustawZajete(sensorBean.id)}"/><br/>
+</h:form>
+</body>
 </html>
