--- a/Dash/src/main/webapp/zmien.xhtml
+++ b/Dash/src/main/webapp/zmien.xhtml
@@ -41,7 +41,7 @@
         <h:inputSecret id="confirmPasswordadmin" value="#{Change.con}"/>
 
         <h:commandButton  value="Change Password" action="#{Change.changeadmin()}"/>
-        <h:commandButton  value="Wroc" outcome="index" />
+        <h:commandButton  value="Wroc" action="index" />
 
 
     </h:form>
