--- a/Parkometr/web/index.xhtml
+++ b/Parkometr/web/index.xhtml
@@ -9,7 +9,7 @@
 <h:form>
    Id miejsca<br/>
    <h:selectOneMenu value="#{ParkometrBean.miejsceId}">
-      <f:selectItems value="#{ParkometrBean.getMiejscaId}"/>
+      <f:selectItems value="#{ParkometrBean.getMiejscaId()}"/>
    </h:selectOneMenu><br/>
    Czas w minutach<br/>
    <h:inputText value="#{ParkometrBean.czas}"/>
